fix: 320px strange layout problem

--- a/src/scss/components/biddingPage/dr/_infoBox.scss
+++ b/src/scss/components/biddingPage/dr/_infoBox.scss
@@ -207,16 +207,16 @@
 
 .bidding-dr-infobox-content-center-inside-total--edit {
   background-color: white;
-  flex-basis: 60%;
+  width: 60%;
 }
 
 .bidding-dr-infobox-content-center-inside-volume--edit {
-  flex-basis: 60%;
+  width: 60%;
   // border: red solid 1px;
 }
 
 .bidding-dr-infobox-content-center-inside-price--edit {
-  flex-basis: 60%;
+  width: 60%;
 }
 
 // 1920 < size
